Add To README.md

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,21 +9,23 @@
   <body id='welcome-page'>
     <h1>Krazy Kendra Sale</h1>
 
-    <img id='leftImg' src='images/leftImg.jpeg'>
+    <img id='leftImg' src='images/leftImg.png'>
 
     <div id='middleColumn'>
       <a href='/products' id='middle' value='View Products'> View Products </a>
-      <img id='ksBoxes' src='images/ksBoxes.jpg'>
+      <img id='ksBoxes' src='images/ksBoxes.png'>
     </div>
 
-    <p id='info'>Great prices on quality jewelry that has 
+    <p id='info'>DISCLAIMER: NOT ACTUALLY AFFILIATED 
+      WITH KENDRA SCOTT! JUST SELLING MY OLD JEWELRY!<br>
+      Great prices on quality jewelry that has 
       been very lightly/never worn. Alot of these 
       pieces are no longer sold in-store or they 
       are custom pieces. Prices are 50%-70% off 
       in-store prices! If you have any questions, 
       feel free to contact me!</p>
 
-    <img id='rightImg' src='images/rightImg.jpeg'>
+    <img id='rightImg' src='images/rightImg.png'>
     
   </body>
 </html>
