--- a/views/products/bracelets.ejs
+++ b/views/products/bracelets.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Bracelets</title>
+  <title>Bracelet Products</title>
 </head>
 <body id='item-page'>
   <div id='nav' class='navbar-fixed'>
@@ -21,7 +21,7 @@
     </nav>
   </div>
   <div>
-    <img id='Img' src='/images/silver/rhod-angela.png'>
+    <img id='Img' src='/images/silver/angela.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Angela Bracelet in Silver'>
       <input type='hidden' name="price" value='$10'>
@@ -30,7 +30,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gunmetal/ngnmt-malia.png'>
+    <img id='Img' src='/images/gunmetal/malia.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Malia Bracelet Set in Navy-Gunmetal'>
       <input type='hidden' name="price" value='$20'>
