--- a/views/products/earrings.ejs
+++ b/views/products/earrings.ejs
@@ -21,7 +21,7 @@
     </nav>
   </div>
   <div>
-    <img id='Img' src='/images/gold/gld-atticus.png'>
+    <img id='Img' src='/images/gold/atticus.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Atticus Earrings in Gold'>
       <input type='hidden' name="price" value='$20'>
@@ -30,7 +30,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/silver/rhod-calista.png'>
+    <img id='Img' src='/images/silver/calista.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Calista Earrings in Silver'>
       <input type='hidden' name="price" value='$25'>
@@ -39,7 +39,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/rsg/rsg-allie.png'>
+    <img id='Img' src='/images/rsg/allie.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Allie Earrings in Rose Gold'>
       <input type='hidden' name="price" value='$50'>
@@ -48,7 +48,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/rsg/rsg-corza.png'>
+    <img id='Img' src='/images/rsg/corza.png'>
     <form action='/products/AddToCart' method='POST'>
       <input type='hidden' name="item" value='Corza Earrings in Rose Gold'>
       <input type='hidden' name="price" value='$30'>
@@ -57,7 +57,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gunmetal/gnmt-alex.png'>
+    <img id='Img' src='/images/gunmetal/alex.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Alex Earrings in Gunmetal'>
       <input type='hidden' name="price" value='$30'>
@@ -66,7 +66,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gunmetal/gnmt-elora.png'>
+    <img id='Img' src='/images/gunmetal/elora.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Elora Earrings in Gunmetal'>
       <input type='hidden' name="price" value='$35'>
