--- a/views/products/gold.ejs
+++ b/views/products/gold.ejs
@@ -22,7 +22,7 @@
     </nav>
   </div>
   <div>
-    <img id='Img' src='/images/gold/gld-atticus.png'>
+    <img id='Img' src='/images/gold/atticus.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Atticus Earrings in Gold'>
       <input type='hidden' name="price" value='$20'>
@@ -31,7 +31,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gold/gld-brett.png'>
+    <img id='Img' src='/images/gold/brett.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Brett Necklace in Gold'>
       <input type='hidden' name="price" value='$20'>
@@ -40,7 +40,7 @@
     </form>   
   </div>
   <div>
-    <img id='Img' src='/images/gold/gld-reagan.png'>
+    <img id='Img' src='/images/gold/reagan.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Reagan Ring in Gold'>
       <input type='hidden' name="price" value='$20'>
