--- a/views/products/gunmetal.ejs
+++ b/views/products/gunmetal.ejs
@@ -22,7 +22,7 @@
     </nav>
   </div>
   <div>
-    <img id='Img' src='/images/gunmetal/gnmt-alex.png'>
+    <img id='Img' src='/images/gunmetal/alex.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Alex Earrings in Gunmetal'>
         <input type='hidden' name="price" value='$30'>
@@ -31,7 +31,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gunmetal/gnmt-darrell.png'>
+    <img id='Img' src='/images/gunmetal/darrell.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Darrell Necklace in Gunmetal'>
       <input type='hidden' name="price" value='$55'>
@@ -40,7 +40,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gunmetal/gnmt-elora.png'>
+    <img id='Img' src='/images/gunmetal/elora.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Elora Earrings in Gunmetal'>
       <input type='hidden' name="price" value='$35'>
@@ -49,7 +49,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gunmetal/ngnmt-malia.png'>
+    <img id='Img' src='/images/gunmetal/malia.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Malia Bracelet Set in Navy-Gunmetal'>
       <input type='hidden' name="price" value='$20'>
