--- a/views/products/necklaces.ejs
+++ b/views/products/necklaces.ejs
@@ -21,7 +21,7 @@
     </nav>
   </div>
   <div>
-    <img id='Img' src='/images/gold/gld-brett.png'>
+    <img id='Img' src='/images/gold/brett.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Brett Necklace in Gold'>
       <input type='hidden' name="price" value='$20'>
@@ -30,7 +30,7 @@
     </form>   
   </div>
   <div>
-    <img id='Img' src='/images/silver/rhod-ember.png'>
+    <img id='Img' src='/images/silver/ember.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Ember Necklace in Silver'>
       <input type='hidden' name="price" value='$15'>
@@ -39,7 +39,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gunmetal/gnmt-darrell.png'>
+    <img id='Img' src='/images/gunmetal/darrell.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Darrell Necklace in Gunmetal'>
       <input type='hidden' name="price" value='$55'>
