--- a/views/products/rings.ejs
+++ b/views/products/rings.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Necklace Products</title>
+  <title>Ring Products</title>
 </head>
 <body id='item-page'>
   <div id='nav' class='navbar-fixed'>
@@ -21,7 +21,7 @@
     </nav>
   </div>
   <div>
-    <img id='Img' src='/images/gold/gld-reagan.png'>
+    <img id='Img' src='/images/gold/reagan.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Reagan Ring in Gold'>
       <input type='hidden' name="price" value='$20'>
@@ -30,7 +30,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/rsg/rsg-pryde.png'>
+    <img id='Img' src='/images/rsg/pryde.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Pryde Ring in Rose Gold'>
       <input type='hidden' name="price" value='$15'>
@@ -39,7 +39,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/rsg/rsg-joel.png'>
+    <img id='Img' src='/images/rsg/joel.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Joel Ring in Rose Gold'>
       <input type='hidden' name="price" value='$5'>
