--- a/views/products/rsg.ejs
+++ b/views/products/rsg.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Gold Products</title>
+  <title>Rose Gold Products</title>
 </head>
 <body id='item-page'>
   <div id='nav' class='navbar-fixed'>
@@ -22,7 +22,7 @@
     </nav>
   </div>
   <div>
-    <img id='Img' src='/images/rsg/rsg-allie.png'>
+    <img id='Img' src='/images/rsg/allie.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Allie Earrings in Rose Gold'>
       <input type='hidden' name="price" value='$50'>
@@ -31,7 +31,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/rsg/rsg-corza.png'>
+    <img id='Img' src='/images/rsg/corza.png'>
     <form action='/products/AddToCart' method='POST'>
       <input type='hidden' name="item" value='Corza Earrings in Rose Gold'>
       <input type='hidden' name="price" value='$30'>
@@ -40,7 +40,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/rsg/rsg-pryde.png'>
+    <img id='Img' src='/images/rsg/pryde.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Pryde Ring in Rose Gold'>
       <input type='hidden' name="price" value='$15'>
@@ -49,7 +49,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/rsg/rsg-joel.png'>
+    <img id='Img' src='/images/rsg/joel.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Joel Ring in Rose Gold'>
       <input type='hidden' name="price" value='$5'>
