--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Product Detail</title>
+  <title>All Products</title>
   <script type="text/javascript" src="https://js.stripe.com/v1/"></script>
 </head>
 <body id='item-page'>
@@ -23,7 +23,7 @@
     </nav>
   </div>
   <div>
-    <img id='Img' src='/images/gold/gld-atticus.png'>
+    <img id='Img' src='/images/gold/atticus.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Atticus Earrings in Gold'>
       <input type='hidden' name="price" value='$20'>
@@ -32,7 +32,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gold/gld-brett.png'>
+    <img id='Img' src='/images/gold/brett.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Brett Necklace in Gold'>
       <input type='hidden' name="price" value='$20'>
@@ -41,7 +41,7 @@
     </form>   
   </div>
   <div>
-    <img id='Img' src='/images/gold/gld-reagan.png'>
+    <img id='Img' src='/images/gold/reagan.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Reagan Ring in Gold'>
       <input type='hidden' name="price" value='$20'>
@@ -50,7 +50,7 @@
     </form>
   </div>  
   <div>
-    <img id='Img' src='/images/silver/rhod-calista.png'>
+    <img id='Img' src='/images/silver/calista.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Calista Earrings in Silver'>
       <input type='hidden' name="price" value='$25'>
@@ -59,7 +59,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/silver/rhod-ember.png'>
+    <img id='Img' src='/images/silver/ember.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Ember Necklace in Silver'>
       <input type='hidden' name="price" value='$15'>
@@ -68,7 +68,7 @@
     </form>
   </div> 
   <div>
-    <img id='Img' src='/images/silver/rhod-angela.png'>
+    <img id='Img' src='/images/silver/angela.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Angela Bracelet in Silver'>
       <input type='hidden' name="price" value='$10'>
@@ -77,7 +77,7 @@
     </form>
   </div> 
   <div>
-    <img id='Img' src='/images/rsg/rsg-allie.png'>
+    <img id='Img' src='/images/rsg/allie.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Allie Earrings in Rose Gold'>
       <input type='hidden' name="price" value='$50'>
@@ -86,7 +86,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/rsg/rsg-corza.png'>
+    <img id='Img' src='/images/rsg/corza.png'>
     <form action='/products/AddToCart' method='POST'>
       <input type='hidden' name="item" value='Corza Earrings in Rose Gold'>
       <input type='hidden' name="price" value='$30'>
@@ -95,7 +95,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/rsg/rsg-joel.png'>
+    <img id='Img' src='/images/rsg/joel.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Joel Ring in Rose Gold'>
       <input type='hidden' name="price" value='$5'>
@@ -104,7 +104,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/rsg/rsg-pryde.png'>
+    <img id='Img' src='/images/rsg/pryde.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Pryde Ring in Rose Gold'>
       <input type='hidden' name="price" value='$15'>
@@ -113,7 +113,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gunmetal/gnmt-alex.png'>
+    <img id='Img' src='/images/gunmetalalex.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Alex Earrings in Gunmetal'>
       <input type='hidden' name="price" value='$30'>
@@ -122,7 +122,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gunmetal/gnmt-elora.png'>
+    <img id='Img' src='/images/gunmetal/elora.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Elora Earrings in Gunmetal'>
       <input type='hidden' name="price" value='$35'>
@@ -131,7 +131,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gunmetal/gnmt-darrell.png'>
+    <img id='Img' src='/images/gunmetal/darrell.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Darrell Necklace in Gunmetal'>
       <input type='hidden' name="price" value='$55'>
@@ -140,7 +140,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/gunmetal/ngnmt-malia.png'>
+    <img id='Img' src='/images/gunmetal/malia.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Malia Bracelet Set in Navy-Gunmetal'>
       <input type='hidden' name="price" value='$20'>
