--- a/views/products/silver.ejs
+++ b/views/products/silver.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <title>Gold Products</title>
+  <title>Silver Products</title>
 </head>
 <body id='item-page'>
   <div id='nav' class='navbar-fixed'>
@@ -22,7 +22,7 @@
     </nav>
   </div>
   <div>
-    <img id='Img' src='/images/silver/rhod-calista.png'>
+    <img id='Img' src='/images/silver/calista.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Calista Earrings in Silver'>
       <input type='hidden' name="price" value='$25'>
@@ -31,7 +31,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/silver/rhod-ember.png'>
+    <img id='Img' src='/images/silver/ember.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Ember Necklace in Silver'>
       <input type='hidden' name="price" value='$15'>
@@ -40,7 +40,7 @@
     </form>
   </div>
   <div>
-    <img id='Img' src='/images/silver/rhod-angela.png'>
+    <img id='Img' src='/images/silver/angela.png'>
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Angela Bracelet in Silver'>
       <input type='hidden' name="price" value='$10'>
