--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <title>Kendra Products</title>
+    <title>Product Options</title>
   </head>
   <body id='products-index-page'>
     <div class='navbar-fixed'>
@@ -30,22 +30,22 @@
 
       <div id='top-options'>
         <div id='gold'>
-          <img id='ders' src='images/dersGold.jpeg'>
+          <img id='ders' src='images/dersGold.png'>
           <a id='goldOption' href='/gold'> Gold Options </a><br>
         </div>
         <div id='silver'>
-          <img id='steph' src='images/stephSlv.jpeg'>
+          <img id='steph' src='images/stephSlv.png'>
           <a id='silverOption' href='/silver'> Silver Options </a><br>
         </div>
         <div id='gunmetal'>
-          <img id='model' src='images/gunmetal.jpeg'>
+          <img id='model' src='images/gunmetal.png'>
           <a id='gunmetalOption' href='/gunmetal'> Gunmetal Options </a><br>
         </div>
       </div>
 
       <div id='bottom-options'>
         <div id='rsg'>
-          <img id='meg' src='images/megRsg.jpeg'>
+          <img id='meg' src='images/megRsg.png'>
           <a id='rsgOption' href='/rsg'> Rose Gold Options </a><br>
         </div>
         <div id='colorful'>
@@ -53,7 +53,7 @@
           <a id='colorfulOption' href='/colorful'> Colorful Options </a><br>
         </div>
         <div id='allProducts'>
-          <img id='boxes' src='images/ksBoxes.jpg'>
+          <img id='boxes' src='images/ksBoxes.png'>
           <a id='allprod' href='/products/show'> All Products </a>
         </div>
       </div>
