--- a/views/products/bracelets.ejs
+++ b/views/products/bracelets.ejs
@@ -25,6 +25,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Angela Bracelet in Silver'>
       <input type='hidden' name="price" value='$10'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Angela<br>Style: Bracelet<br>Metal: Silver<br>Season: Fall 2017<br>Price: $10</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -34,6 +35,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Malia Bracelet Set in Navy-Gunmetal'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Malia<br>Style: Bracelet<br>Metal: Navy-Gunmetal<br>Season: Winter 2018<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>
