--- a/views/products/earrings.ejs
+++ b/views/products/earrings.ejs
@@ -25,6 +25,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Atticus Earrings in Gold'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Atticus<br>Style: Earrings<br>Metal: Gold<br>Season: Winter 2017<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -34,6 +35,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Calista Earrings in Silver'>
       <input type='hidden' name="price" value='$25'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Calista<br>Style: Earrings<br>Metal: Silver<br>Season: Winter 2017<br>Price: $25</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -43,6 +45,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Allie Earrings in Rose Gold'>
       <input type='hidden' name="price" value='$50'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Allie<br>Style: Earrings<br>Metal: Rose Gold<br>Stone: Ivory Mother of Pearl<br>Price: $50</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -52,6 +55,7 @@
     <form action='/products/AddToCart' method='POST'>
       <input type='hidden' name="item" value='Corza Earrings in Rose Gold'>
       <input type='hidden' name="price" value='$30'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Corza<br>Style: Earrings<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $30</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -61,6 +65,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Alex Earrings in Gunmetal'>
       <input type='hidden' name="price" value='$30'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Alex<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Abalone<br>Price: $30</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -70,6 +75,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Elora Earrings in Gunmetal'>
       <input type='hidden' name="price" value='$35'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Elora<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Sky Blue Illusion<br>Price: $35</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -79,6 +85,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Thomas Earrings in Matte White'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Thomas<br>Style: Earrings<br>Metal: Matte White<br>Season: Spring 2018<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>
