--- a/views/products/gold.ejs
+++ b/views/products/gold.ejs
@@ -26,6 +26,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Atticus Earrings in Gold'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Atticus<br>Style: Earrings<br>Metal: Gold<br>Season: Winter 2017<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -35,6 +36,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Brett Necklace in Gold'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Brett<br>Style: Necklace<br>Metal: Gold<br>Season: Winter 2017<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>   
@@ -44,6 +46,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Reagan Ring in Gold'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Reagan<br>Style: Ring<br>Metal: Gold<br>Season: Fall 2018<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>
