--- a/views/products/gunmetal.ejs
+++ b/views/products/gunmetal.ejs
@@ -26,6 +26,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Alex Earrings in Gunmetal'>
         <input type='hidden' name="price" value='$30'>
+        <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Alex<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Abalone<br>Price: $30</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -35,6 +36,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Darrell Necklace in Gunmetal'>
       <input type='hidden' name="price" value='$55'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Darrell<br>Style: Necklace<br>Metal: Gunmetal<br>Stones: Abalone, Dichroic Glass, and Clear<br>Price: $55</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -44,6 +46,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Elora Earrings in Gunmetal'>
       <input type='hidden' name="price" value='$35'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Elora<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Sky Blue Illusion<br>Price: $35</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -53,6 +56,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Malia Bracelet Set in Navy-Gunmetal'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Malia<br>Style: Bracelet<br>Metal: Navy-Gunmetal<br>Season: Winter 2018<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>
