--- a/views/products/necklaces.ejs
+++ b/views/products/necklaces.ejs
@@ -25,6 +25,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Brett Necklace in Gold'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Brett<br>Style: Necklace<br>Metal: Gold<br>Season: Winter 2017<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>   
@@ -34,6 +35,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Ember Necklace in Silver'>
       <input type='hidden' name="price" value='$15'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Ember<br>Style: Necklace<br>Metal: Silver<br>Season: Fall 2018<br>Price: $15</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -43,6 +45,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Darrell Necklace in Gunmetal'>
       <input type='hidden' name="price" value='$55'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Darrell<br>Style: Necklace<br>Metal: Gunmetal<br>Stones: Abalone, Dichroic Glass, and Clear<br>Price: $55</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -52,6 +55,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Phara Necklace in Matte White'>
       <input type='hidden' name="price" value='$45'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Phara<br>Style: Necklace<br>Metal: Matte White<br>Season: Spring 2018<br>Price: $45</p>
       <input type='submit' value='Add To Cart'>
     </form>
