--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -27,6 +27,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Atticus Earrings in Gold'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Atticus<br>Style: Earrings<br>Metal: Gold<br>Season: Winter 2017<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -36,6 +37,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Brett Necklace in Gold'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Brett<br>Style: Necklace<br>Metal: Gold<br>Season: Winter 2017<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>   
@@ -45,6 +47,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Reagan Ring in Gold'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Reagan<br>Style: Ring<br>Metal: Gold<br>Season: Fall 2018<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -54,6 +57,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Calista Earrings in Silver'>
       <input type='hidden' name="price" value='$25'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Calista<br>Style: Earrings<br>Metal: Silver<br>Season: Winter 2017<br>Price: $25</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -63,6 +67,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Ember Necklace in Silver'>
       <input type='hidden' name="price" value='$15'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Ember<br>Style: Necklace<br>Metal: Silver<br>Season: Fall 2018<br>Price: $15</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -72,6 +77,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Angela Bracelet in Silver'>
       <input type='hidden' name="price" value='$10'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Angela<br>Style: Bracelet<br>Metal: Silver<br>Season: Fall 2018<br>Price: $10</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -81,6 +87,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Allie Earrings in Rose Gold'>
       <input type='hidden' name="price" value='$50'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Allie<br>Style: Earrings<br>Metal: Rose Gold<br>Stone: Ivory Mother of Pearl<br>Price: $50</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -90,6 +97,7 @@
     <form action='/products/AddToCart' method='POST'>
       <input type='hidden' name="item" value='Corza Earrings in Rose Gold'>
       <input type='hidden' name="price" value='$30'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Corza<br>Style: Earrings<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $30</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -99,6 +107,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Joel Ring in Rose Gold'>
       <input type='hidden' name="price" value='$5'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Joel<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $5</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -108,6 +117,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Pryde Ring in Rose Gold'>
       <input type='hidden' name="price" value='$15'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Pryde<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $15</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -117,6 +127,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Alex Earrings in Gunmetal'>
       <input type='hidden' name="price" value='$30'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Alex<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Abalone<br>Price: $30</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -126,6 +137,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Elora Earrings in Gunmetal'>
       <input type='hidden' name="price" value='$35'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Elora<br>Style: Earrings<br>Metal: Gunmetal<br>Stone: Sky Blue Illusion<br>Price: $35</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -135,6 +147,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Darrell Necklace in Gunmetal'>
       <input type='hidden' name="price" value='$55'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Darrell<br>Style: Necklace<br>Metal: Gunmetal<br>Stones: Abalone, Dichroic Glass, and Clear<br>Price: $55</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -144,6 +157,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Malia Bracelet Set in Navy-Gunmetal'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Malia<br>Style: Bracelet<br>Metal: Navy-Gunmetal<br>Season: Winter 2018<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -153,6 +167,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Thomas Earrings in Matte White'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Thomas<br>Style: Earrings<br>Metal: Matte White<br>Season: Spring 2018<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -162,6 +177,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Phara Necklace in Matte White'>
       <input type='hidden' name="price" value='$45'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Phara<br>Style: Necklace<br>Metal: Matte White<br>Season: Spring 2018<br>Price: $45</p>
       <input type='submit' value='Add To Cart'>
     </form>
