--- a/views/products/silver.ejs
+++ b/views/products/silver.ejs
@@ -26,6 +26,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Calista Earrings in Silver'>
       <input type='hidden' name="price" value='$25'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Calista<br>Style: Earrings<br>Metal: Silver<br>Season: Winter 2018<br>Price: $25</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -35,6 +36,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Ember Necklace in Silver'>
       <input type='hidden' name="price" value='$15'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Ember<br>Style: Necklace<br>Metal: Silver<br>Season: Fall 2018<br>Price: $15</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -44,6 +46,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Angela Bracelet in Silver'>
       <input type='hidden' name="price" value='$10'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Angela<br>Style: Bracelet<br>Metal: Silver<br>Season: Fall 2018<br>Price: $10</p>
       <input type='submit' value='Add To Cart'>
     </form>
