--- a/views/products/colorful.ejs
+++ b/views/products/colorful.ejs
@@ -26,6 +26,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Thomas Earrings in Matte White'>
       <input type='hidden' name="price" value='$20'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Thomas<br>Style: Earrings<br>Metal: Matte White<br>Season: Spring 2018<br>Price: $20</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -35,6 +36,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Phara Necklace in Matte White'>
       <input type='hidden' name="price" value='$45'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Phara<br>Style: Necklace<br>Metal: Matte White<br>Season: Spring 2018<br>Price: $45</p>
       <input type='submit' value='Add To Cart'>
     </form>
