--- a/views/products/orders/new.ejs
+++ b/views/products/orders/new.ejs
@@ -28,11 +28,20 @@
   <ul id='cartContent'>
     <% user.cart.forEach(function(item) { %>
     <li>
+      <%= item.quantity %>
       <%- item.item %>
       <%= item.price %>
-      <% }) %>
+      <form action='/cart/delete/<%= item._id %>?_method=DELETE' method='POST'>
+        <input type='submit' value='Delete'>
+      </form>
+      <form action="/cart/edit/<%= item._id %>?_method=PUT" method="POST" autocomplete="off">
+        <input name='quantity' type='text'>
+        <input type="submit" value="Edit Quanitity">
+      </form>
+      <% }); %>
     </li>
   </ul>
+
   <footer id='footer-cart'>
     <a  id='back' href='/products'> Back </a>
   </footer>
