--- a/views/products/rsg.ejs
+++ b/views/products/rsg.ejs
@@ -26,6 +26,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Allie Earrings in Rose Gold'>
       <input type='hidden' name="price" value='$50'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Allie<br>Style: Earrings<br>Metal: Rose Gold<br>Stone: Ivory Mother of Pearl<br>Price: $50</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -35,6 +36,7 @@
     <form action='/products/AddToCart' method='POST'>
       <input type='hidden' name="item" value='Corza Earrings in Rose Gold'>
       <input type='hidden' name="price" value='$30'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Corza<br>Style: Earrings<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $30</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -44,6 +46,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Pryde Ring in Rose Gold'>
       <input type='hidden' name="price" value='$15'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Pryde<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $15</p>
       <input type='submit' value='Add To Cart'>
     </form>
@@ -53,6 +56,7 @@
     <form action='/products/addToCart' method='POST'>
       <input type='hidden' name="item" value='Joel Ring in Rose Gold'>
       <input type='hidden' name="price" value='$5'>
+      <input type='hidden' name="quantity" value='1'>
       <p id='detail'>Name: Joel<br>Style: Ring<br>Metal: Rose Gold<br>Season: Winter 2018<br>Price: $5</p>
       <input type='submit' value='Add To Cart'>
     </form>
